--- a/src/components/ContentModal.css
+++ b/src/components/ContentModal.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap");
 
+.ModalStyled {
+    display: flex;
+  align-items: center;
+  justify-content: center
+}
+
 .ContentModal__landscape {
   object-fit: contain;
   border-radius: 10px;
